# OpenGenAI

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  demo.py  docker-compose.yml  env.example  hatch.toml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  simple_demo.py  sitemap.xml  tox.ini
scripts/: init_db.sql
search/: search_index.json
src/opengenai/: __init__.py  __version__.py
src/opengenai/agents/: __init__.py  base.py  communication.py  manager.py  models.py  registry.py
src/opengenai/agents/specialized/: __init__.py  research_agent.py
src/opengenai/api/: app.py
src/opengenai/api/middleware/: __init__.py
src/opengenai/api/routers/: __init__.py  admin.py  agents.py  health.py  tasks.py
src/opengenai/cli/: __init__.py  main.py
src/opengenai/core/: config.py  exceptions.py  logging.py  performance.py  security.py  types.py
src/opengenai/monitoring/: metrics.py  tracing.py
src/opengenai/storage/: database.py
src/opengenai/tasks/: task_manager.py
tests/unit/: test_agents.py  test_health.py
